force-app/main/default/objects/Case/fields/CCR_Resolution__c.field-meta.xml
<CustomField>
    <fullName>CCR_Resolution__c</fullName>
    <description>Used by: CCR
Description: Resolution is the dependent picklist of subject code.</description>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_SubjectCodeNew__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>LSP Contacted</fullName>
            </value>
            <value>
                <fullName>New for Old Offer</fullName>
            </value>
            <value>
                <fullName>Order Canceled</fullName>
            </value>
            <value>
                <fullName>Order Corrected</fullName>
            </value>
            <value>
                <fullName>Order Not Placed</fullName>
            </value>
            <value>
                <fullName>Order Placed</fullName>
            </value>
            <value>
                <fullName>PSP Contacted</fullName>
            </value>
            <value>
                <fullName>Replacement by courier</fullName>
            </value>
            <value>
                <fullName>Replacement face to face</fullName>
            </value>
            <value>
                <fullName>Replacement Not Possible</fullName>
            </value>
            <value>
                <fullName>Replacement Order</fullName>
            </value>
            <value>
                <fullName>Return not possible</fullName>
            </value>
            <value>
                <fullName>Return Order</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Refund - KOREA ONLY</fullName>
            </value>
            <value>
                <fullName>Order collected</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancellation not possible</fullName>
            </value>
            <value>
                <fullName>Payment details updated</fullName>
            </value>
            <value>
                <fullName>Subscription Cancelled</fullName>
            </value>
            <value>
                <fullName>Compensatory</fullName>
            </value>
            <value>
                <fullName>Non Compensatory</fullName>
            </value>
            <value>
                <fullName>Completed - Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Completed - Offer not Accepted</fullName>
            </value>
            <value>
                <fullName>Transferred to retail</fullName>
            </value>
            <value>
                <fullName>Transferred to Qoach</fullName>
            </value>
            <value>
                <fullName>Transferred to Website</fullName>
            </value>
            <value>
                <fullName>Sales offer accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>