force-app/main/default/objects/Case/fields/CCR_SubjectCodeNew__c.field-meta.xml
<CustomField>
    <fullName>CCR_SubjectCodeNew__c</fullName>
    <description>Used by: CCR
Description: subject code is the dependent picklist of sub type.</description>
    <inlineHelpText>Subject Code</inlineHelpText>
    <label>Subject Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_SubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CCR_SubjectCode</valueSetName>
    </valueSet>
</CustomField>