force-app/main/default/objects/Case/fields/CCR_SubType__c.field-meta.xml
<CustomField>
    <fullName>CCR_SubType__c</fullName>
    <description>Type of order, e.g. Replacement Order Warranty, Replacement Order Goodwill, Replacement POS, Return Order</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Web Issues</fullName>
                <label>Account Management</label>
            </value>
            <value>
                <fullName>Alleged Claims</fullName>
            </value>
            <value>
                <fullName>Charger</fullName>
            </value>
            <value>
                <fullName>Churn Management</fullName>
            </value>
            <value>
                <fullName>Click &amp; Collect</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Consumables Premium Delivery</fullName>
            </value>
            <value>
                <fullName>Customer /Product Care</fullName>
                <label>Customer / Product Care</label>
            </value>
            <value>
                <fullName>Data Privacy</fullName>
            </value>
            <value>
                <fullName>Device Subscription</fullName>
            </value>
            <value>
                <fullName>Ecommerce Orders</fullName>
            </value>
            <value>
                <fullName>Electronic Accessory</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Heatsticks</fullName>
            </value>
            <value>
                <fullName>Holder</fullName>
            </value>
            <value>
                <fullName>IQOS Club</fullName>
            </value>
            <value>
                <fullName>IQOS Product</fullName>
            </value>
            <value>
                <fullName>Lead validation</fullName>
            </value>
            <value>
                <fullName>Lending</fullName>
            </value>
            <value>
                <fullName>Market Specific Red Talking Points</fullName>
            </value>
            <value>
                <fullName>NCP Battery</fullName>
            </value>
            <value>
                <fullName>NCP Closed Cartridge</fullName>
            </value>
            <value>
                <fullName>NCP Device</fullName>
            </value>
            <value>
                <fullName>Non Electronic Accessory</fullName>
            </value>
            <value>
                <fullName>Order on Behalf</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>