force-app/main/default/objects/Case/fields/CCR_UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>CCR_UnitOfMeasure__c</fullName>
    <description>Used by CCR
Description:To be used to indicate the unit of measurement of Heets Pack/Carton/Pouch etc</description>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>Pouch</fullName>
            </value>
            <value>
                <fullName>Cartomizer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>