force-app/main/default/objects/Case/fields/CCR_Verbatim__c.field-meta.xml
<CustomField>
    <fullName>CCR_Verbatim__c</fullName>
    <description>Free Text were agent is detailing the consumer case</description>
    <label>Verbatim</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>