force-app/main/default/objects/Case/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>불만족 사유</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>배터리 용량 부족</fullName>
            </value>
            <value>
                <fullName>무화량 부족</fullName>
            </value>
            <value>
                <fullName>간헐적 기기 오류</fullName>
            </value>
            <value>
                <fullName>휴대성</fullName>
            </value>
            <value>
                <fullName>클리닝</fullName>
            </value>
            <value>
                <fullName>사용방법</fullName>
            </value>
            <value>
                <fullName>3M 리드 불량</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>히츠 맛</fullName>
            </value>
            <value>
                <fullName>히츠 불량</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>