force-app/main/default/objects/Case/fields/KDCE_BrandDifferentiator__c.field-meta.xml
<CustomField>
    <fullName>KDCE_BrandDifferentiator__c</fullName>
    <label>Brand Differentiator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KDCE_BrandFamily__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLUESELE</fullName>
            </value>
            <value>
                <fullName>GREENSE</fullName>
            </value>
            <value>
                <fullName>SILVSEL</fullName>
            </value>
            <value>
                <fullName>AMBERSEL</fullName>
            </value>
            <value>
                <fullName>PURPWA</fullName>
            </value>
            <value>
                <fullName>GREENZIN</fullName>
            </value>
            <value>
                <fullName>TURQSEL</fullName>
            </value>
            <value>
                <fullName>GOLDSELC</fullName>
            </value>
            <value>
                <fullName>BRONZESE</fullName>
            </value>
            <value>
                <fullName>CEDARSEL</fullName>
            </value>
            <value>
                <fullName>SUMMERBR</fullName>
            </value>
            <value>
                <fullName>AMMIL</fullName>
            </value>
            <value>
                <fullName>NOOR</fullName>
            </value>
            <value>
                <fullName>YUGEN</fullName>
            </value>
            <value>
                <fullName>BGS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>