force-app/main/default/objects/Case/fields/KDCE_CallDuration__c.field-meta.xml
<CustomField>
    <fullName>KDCE_CallDuration__c</fullName>
    <description>통화 시간</description>
    <label>Call Duration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>