force-app/main/default/objects/Case/fields/KDCE_EventParticipation__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EventParticipation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>이벤트 참여</label>
    <type>Checkbox</type>
</CustomField>