force-app/main/default/objects/Case/fields/KDCE_FlowIssueDetailType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FlowIssueDetailType__c</fullName>
    <description>Flow에서 사용하기 위한 Issue Detail Type</description>
    <label>Flow Issue Detail Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KDCE_FlowIssueType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CVS 교환/환불 절차</fullName>
            </value>
            <value>
                <fullName>히팅 블레이드 굿윌 서비스</fullName>
            </value>
            <value>
                <fullName>환불 정책</fullName>
            </value>
            <value>
                <fullName>처음 사용 전에 기기 오작동(초도 불량)</fullName>
            </value>
            <value>
                <fullName>보상</fullName>
            </value>
            <value>
                <fullName>기기 종류별 다른 서비스 제공</fullName>
            </value>
            <value>
                <fullName>Call Flow에 따라 진행</fullName>
            </value>
            <value>
                <fullName>회원 탈퇴</fullName>
            </value>
            <value>
                <fullName>할인 코드</fullName>
            </value>
            <value>
                <fullName>프로모션 이메일 수신</fullName>
            </value>
            <value>
                <fullName>정보를 찾을 수 없음</fullName>
            </value>
            <value>
                <fullName>시스템 다운 또는 느림</fullName>
            </value>
            <value>
                <fullName>로그인 이슈</fullName>
            </value>
            <value>
                <fullName>기기 등록/ 회원 가입</fullName>
            </value>
            <value>
                <fullName>IVR 절차-개인정보 제공 동의</fullName>
            </value>
            <value>
                <fullName>F2F 채널 직원에 대한 불만</fullName>
            </value>
            <value>
                <fullName>첫번째 전화 해결</fullName>
            </value>
            <value>
                <fullName>약속 불이행/ 메세지와 내용 다름</fullName>
            </value>
            <value>
                <fullName>성인인증 절차</fullName>
            </value>
            <value>
                <fullName>낮은 서비스 레벨</fullName>
            </value>
            <value>
                <fullName>고객이 상담사 통화 연결까지 너무 오랜시간이 걸렸다고 느낌</fullName>
            </value>
            <value>
                <fullName>보증 종료</fullName>
            </value>
            <value>
                <fullName>보증대상이 아닐 경우, 교환/환불 서비스가 불가능한지? (예: 포켓 충전기 리드/ 침수 등)</fullName>
            </value>
            <value>
                <fullName>다른 나라/ 면세점에서의 IQOS/ 악세서리 구입이 보증 대상이 아닌지?</fullName>
            </value>
            <value>
                <fullName>지연</fullName>
            </value>
            <value>
                <fullName>오배송</fullName>
            </value>
            <value>
                <fullName>지인과 서비스가 다름</fullName>
            </value>
            <value>
                <fullName>디자인(설계)에 대한 일반적 반감</fullName>
            </value>
            <value>
                <fullName>기기 결함</fullName>
            </value>
            <value>
                <fullName>히츠스틱 비어 있음/ 담뱃잎 없음/ 증기 없음/ 일관성 없는 경험</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>