force-app/main/default/objects/Case/fields/KDCE_FlowIssueType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FlowIssueType__c</fullName>
    <description>Flow에서 사용하기 위한 Issue Type</description>
    <label>Flow Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>절차이슈</fullName>
            </value>
            <value>
                <fullName>악세서리 이슈</fullName>
            </value>
            <value>
                <fullName>시스템 이슈</fullName>
            </value>
            <value>
                <fullName>상담 품질 이슈</fullName>
            </value>
            <value>
                <fullName>보증 이슈</fullName>
            </value>
            <value>
                <fullName>배송 이슈</fullName>
            </value>
            <value>
                <fullName>대우 이슈</fullName>
            </value>
            <value>
                <fullName>기기 성능 및 특징 이슈</fullName>
            </value>
            <value>
                <fullName>가용성 이슈</fullName>
            </value>
            <value>
                <fullName>가격이슈</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>