force-app/main/default/objects/Case/fields/KDCE_fm_CaseCreationTimeFrame__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_CaseCreationTimeFrame__c</fullName>
    <description>Case 생성 시간대</description>
    <formula>TEXT(FLOOR ( MOD( CreatedDate - ( $System.OriginDateTime - 9/24 ),1 ) *24)) &amp; &quot;.00 -&quot; &amp; TEXT(FLOOR ( MOD( CreatedDate - ( $System.OriginDateTime - 9/24 ),1 ) *24)+1) &amp; &quot;.00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Creation Time Frame (Hour)</label>
    <type>Text</type>
</CustomField>