force-app/main/default/objects/Case/fields/KDCE_fm_ParentSubjectCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_ParentSubjectCode__c</fullName>
    <formula>IF( Parent.RecordTypeId = &apos;0125g0000006QbSAAU&apos;, TEXT( Parent.KDCE_HeetsSubjectCode__c ), TEXT( Parent.CCR_SubjectCodeNew__c ))</formula>
    <label>Parent Case Subject Code</label>
    <type>Text</type>
</CustomField>