force-app/main/default/objects/Case/fields/KDCE_fm_SuppliedEmailMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_SuppliedEmailMask__c</fullName>
    <formula>IF( OR( RIGHT( SuppliedEmail, 3 ) = &quot;com&quot;, RIGHT( SuppliedEmail, 3 ) = &quot;net&quot; ),
    RPAD( LEFT( SuppliedEmail, 3 ), FIND( &quot;@&quot;, SuppliedEmail )-1, &quot;*&quot; ) &amp;
    MID( SuppliedEmail, FIND( &quot;@&quot;, SuppliedEmail ), 1 ) &amp;
    RPAD( MID( SuppliedEmail, FIND( &quot;@&quot;, SuppliedEmail )+1, 1 ), FIND( &quot;.&quot;, MID( SuppliedEmail, FIND( &quot;@&quot;, SuppliedEmail )+1, LEN( SuppliedEmail )))-1, &quot;*&quot; ) &amp;
    RIGHT( SuppliedEmail, 4 ),
			RPAD( LEFT( SuppliedEmail, 3 ), FIND( &quot;@&quot;, SuppliedEmail )-1, &quot;*&quot; ) &amp;
    MID( SuppliedEmail, FIND( &quot;@&quot;, SuppliedEmail ), 1 ) &amp;
    RPAD( MID( SuppliedEmail, FIND( &quot;@&quot;, SuppliedEmail )+1, 1 ), FIND( &quot;.&quot;, MID( SuppliedEmail, FIND( &quot;@&quot;, SuppliedEmail )+1, LEN( SuppliedEmail )))-1, &quot;*&quot; ) &amp;
    RIGHT( SuppliedEmail, 3 )
			 )</formula>
    <label>Web Email(Mask)</label>
    <type>Text</type>
</CustomField>