force-app/main/default/objects/Case/fields/KDCE_fm_SuppliedNameMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_SuppliedNameMask__c</fullName>
    <description>[KDCE] 웹 이름 필드 마스킹</description>
    <formula>RPAD( LEFT( SuppliedName, 1), LEN( SuppliedName ), &apos;*&apos;)+RIGHT( SuppliedName, 1 )</formula>
    <label>Web Name(Mask)</label>
    <type>Text</type>
</CustomField>