force-app/main/default/objects/Case/fields/KDCE_fm_SuppliedPhoneMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_SuppliedPhoneMask__c</fullName>
    <description>[KDCE] 웹 전화 필드 마스킹</description>
    <formula>IF( LEFT( SuppliedPhone, 2 ) = &quot;02&quot;,
MID( SuppliedPhone, 1, 2 ) &amp; SUBSTITUTE( MID( SuppliedPhone, 3, 7 ), MID( SuppliedPhone, 3, 7 ), &quot;-***-&quot; ) &amp; RIGHT( SuppliedPhone, 4 ),
MID( SuppliedPhone, 1, 3 ) &amp; SUBSTITUTE( MID( SuppliedPhone, 4, 9 ), MID( SuppliedPhone, 4, 9 ), &quot;-****-&quot; ) &amp; RIGHT( SuppliedPhone, 4 ))</formula>
    <label>Web Phone(Mask)</label>
    <type>Text</type>
</CustomField>