force-app/main/default/objects/Case/fields/KDCE_HeetsCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_HeetsCode__c</fullName>
    <label>HEETS Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[비협조고객]</fullName>
            </value>
            <value>
                <fullName>[팩 분실]</fullName>
            </value>
            <value>
                <fullName>[읽을수없음]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>