force-app/main/default/objects/Case/fields/KDCE_HeetsResolution__c.field-meta.xml
<CustomField>
    <fullName>KDCE_HeetsResolution__c</fullName>
    <label>HEETS Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement by courier</fullName>
            </value>
            <value>
                <fullName>Replacement face to face</fullName>
            </value>
            <value>
                <fullName>Replacement Not Possible</fullName>
            </value>
            <value>
                <fullName>Refund - KOREA ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>