force-app/main/default/objects/Case/fields/KDCE_HeetsSubjectCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_HeetsSubjectCode__c</fullName>
    <label>HEETS Subject Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_ConsumableComplaintReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CCR_SubjectCode</valueSetName>
    </valueSet>
</CustomField>