force-app/main/default/objects/Case/fields/KDCE_InquiryResult__c.field-meta.xml
<CustomField>
    <fullName>KDCE_InquiryResult__c</fullName>
    <label>Inquiry Result</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>