force-app/main/default/objects/Case/fields/KDCE_IsChatterNotificationAvailable__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsChatterNotificationAvailable__c</fullName>
    <formula>IF(
	CONTAINS(CreatedBy.LastName, &apos;Site Guest&apos;),
	FALSE,
	IF(
		OR(CONTAINS(Owner:User.LastName, &apos;Korea PMI&apos;), CONTAINS(Owner:Queue.QueueName, &apos;Queue&apos;)),
		FALSE,
		TRUE
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chatter Notification Available</label>
    <type>Checkbox</type>
</CustomField>