force-app/main/default/objects/Case/fields/KDCE_IsOnlineCase__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsOnlineCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>케이스 소유자의 division과 일치하는 store정보가 없으면 온라인, 아닐 경우 오프라인</description>
    <label>Online Case</label>
    <type>Checkbox</type>
</CustomField>