force-app/main/default/objects/Case/fields/KDCE_IVR__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IVR__c</fullName>
    <label>IVR Menu</label>
    <length>30</length>
    <type>Text</type>
</CustomField>