force-app/main/default/objects/Case/fields/KDCE_NoReplacement__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NoReplacement__c</fullName>
    <label>No Replacement Sub Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KDCE_HeetsResolution__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>교환 절차 불만</fullName>
            </value>
            <value>
                <fullName>환불 요청</fullName>
            </value>
            <value>
                <fullName>피드백 요청</fullName>
            </value>
            <value>
                <fullName>확인 거부</fullName>
            </value>
            <value>
                <fullName>잔여갑 또는 히츠 없음</fullName>
            </value>
            <value>
                <fullName>센터 내방</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>