force-app/main/default/objects/Case/fields/KDCE_OB_Collection__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_Collection__c</fullName>
    <inlineHelpText>Rental +21</inlineHelpText>
    <label>추심 여부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KDCE_OB_Stage</valueSetName>
    </valueSet>
</CustomField>