force-app/main/default/objects/Case/fields/KDCE_OB_Conversion__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_Conversion__c</fullName>
    <inlineHelpText>Rental +13</inlineHelpText>
    <label>컨버전</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KDCE_OB_Conversion</valueSetName>
    </valueSet>
</CustomField>