force-app/main/default/objects/Case/fields/KDCE_OB_FirstAgent__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_FirstAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OB 1차 담당자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_OB_User</relationshipName>
    <type>Lookup</type>
</CustomField>