force-app/main/default/objects/Case/fields/KDCE_OB_IQOSIssueType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_IQOSIssueType__c</fullName>
    <label>IQOS 이슈 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>기기 이슈</fullName>
            </value>
            <value>
                <fullName>액세서리 이슈</fullName>
            </value>
            <value>
                <fullName>기기성능 및 특징 이슈</fullName>
            </value>
            <value>
                <fullName>가격 이슈</fullName>
            </value>
            <value>
                <fullName>가용성 이슈</fullName>
            </value>
            <value>
                <fullName>상담품질 이슈</fullName>
            </value>
            <value>
                <fullName>배송 이슈</fullName>
            </value>
            <value>
                <fullName>대우 이슈</fullName>
            </value>
            <value>
                <fullName>보증 이슈</fullName>
            </value>
            <value>
                <fullName>시스템 이슈</fullName>
            </value>
            <value>
                <fullName>AS 이슈</fullName>
            </value>
            <value>
                <fullName>정책 이슈</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>