force-app/main/default/objects/Case/fields/KDCE_OB_Issue__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_Issue__c</fullName>
    <label>이슈 내용</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KDCE_OB_IQOSIssueType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>기기 결함</fullName>
            </value>
            <value>
                <fullName>기기 디자인 및 설계</fullName>
            </value>
            <value>
                <fullName>초기불량</fullName>
            </value>
            <value>
                <fullName>악세서리 관련 불만</fullName>
            </value>
            <value>
                <fullName>홀더 2개 연속 사용 불가능</fullName>
            </value>
            <value>
                <fullName>충전시간 너무 오래 걸림 (포켓 충전기)</fullName>
            </value>
            <value>
                <fullName>충전시간 너무 오래 걸림 (홀더)</fullName>
            </value>
            <value>
                <fullName>복잡한 사용방법</fullName>
            </value>
            <value>
                <fullName>맛에 대한 불만족 (완전한 느낌도 없는)</fullName>
            </value>
            <value>
                <fullName>히츠스틱 (비어 있음 / 담뱃잎 없음 / 증기 없음 / 일관성 없는 경험)</fullName>
            </value>
            <value>
                <fullName>냄새</fullName>
            </value>
            <value>
                <fullName>악세서리 가격</fullName>
            </value>
            <value>
                <fullName>IQOS 사용 후 전보다 더 많은 타바코 사용하고 지출이 증가했다고 주장</fullName>
            </value>
            <value>
                <fullName>기기 종류별 가격 차이</fullName>
            </value>
            <value>
                <fullName>주변에 이용 가능한 스토어를 찾을 수 없음</fullName>
            </value>
            <value>
                <fullName>국가/시장별 제품군 차이</fullName>
            </value>
            <value>
                <fullName>재고 없음</fullName>
            </value>
            <value>
                <fullName>상담시 개인정보 제공 동의 절차 불만</fullName>
            </value>
            <value>
                <fullName>상담사 연결이 오래걸림</fullName>
            </value>
            <value>
                <fullName>상담시 성인인증 절차 불만</fullName>
            </value>
            <value>
                <fullName>전화상담 불만족</fullName>
            </value>
            <value>
                <fullName>채팅상담 불만족</fullName>
            </value>
            <value>
                <fullName>F2F 채널 직원 불만</fullName>
            </value>
            <value>
                <fullName>고객센터 오상담</fullName>
            </value>
            <value>
                <fullName>배송지연</fullName>
            </value>
            <value>
                <fullName>오배송</fullName>
            </value>
            <value>
                <fullName>지인과 서비스 차이</fullName>
            </value>
            <value>
                <fullName>구매증빙 제공 불만</fullName>
            </value>
            <value>
                <fullName>보증기간 만료로 교환불가</fullName>
            </value>
            <value>
                <fullName>보증 대상이 아닐 경우, 교환/환불 서비스가 불가 (예: 포켓 충전기 리드/ 침수 등)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>